[gd_scene format=3 uid="uid://c8nrsvxatuyhd"]

[ext_resource type="Script" uid="uid://jm8i6652j64e" path="res://Scripts/main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://btt0oqc06ljck" path="res://Scenes/7_segment_timer.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://bg10tcirfjt2m" path="res://Scenes/settings_panel.tscn" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://c7j1psfjgl2pu" path="res://Icons/PlayButton.svg" id="2_7mycd"]
[ext_resource type="Texture2D" uid="uid://1vutdcm3s7mm" path="res://Icons/StopButton.svg" id="3_272bh"]
[ext_resource type="Texture2D" uid="uid://30x5sxwsv151" path="res://Icons/PauseButton.svg" id="3_efxa6"]
[ext_resource type="Texture2D" uid="uid://cy3022jqoo71v" path="res://Icons/EqualButton.svg" id="4_5vw27"]
[ext_resource type="Texture2D" uid="uid://btwpx6nbhlnnc" path="res://Icons/ClockButton.svg" id="6_4c57u"]
[ext_resource type="Texture2D" uid="uid://cay3cx7m6ycjx" path="res://Icons/ListButton.svg" id="6_kek77"]
[ext_resource type="Texture2D" uid="uid://4mknea08ggfl" path="res://Icons/SettingsButton.svg" id="7_4c57u"]
[ext_resource type="PackedScene" uid="uid://d172ayshc1gb8" path="res://Scenes/entry_list.tscn" id="9_efxa6"]

[node name="Main" type="Control" unique_id=1237992629]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h2yge")
play_icon = ExtResource("2_7mycd")
pause_icon = ExtResource("3_efxa6")

[node name="TimerAndButtons" type="VBoxContainer" parent="." unique_id=765918811]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer2" type="HBoxContainer" parent="TimerAndButtons" unique_id=1630515425]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TimerAndButtons/HBoxContainer2" unique_id=224585707]
layout_mode = 2
size_flags_horizontal = 0

[node name="PlayPauseButton" type="Button" parent="TimerAndButtons/HBoxContainer2/VBoxContainer" unique_id=720547510]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Start / Pause"
toggle_mode = true
icon = ExtResource("2_7mycd")

[node name="StopButton" type="Button" parent="TimerAndButtons/HBoxContainer2/VBoxContainer" unique_id=285193584]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Stop Task"
icon = ExtResource("3_272bh")

[node name="ShowTotalButton" type="Button" parent="TimerAndButtons/HBoxContainer2/VBoxContainer" unique_id=1371751418]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Total Project Time"
toggle_mode = true
icon = ExtResource("4_5vw27")

[node name="SegmentTimer" parent="TimerAndButtons/HBoxContainer2" unique_id=1045209636 instance=ExtResource("1_ig7tw")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TimerAndButtons" unique_id=1075399920]
layout_mode = 2

[node name="TaskDescription" type="LineEdit" parent="TimerAndButtons/HBoxContainer" unique_id=16555986]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Current Task Description"
placeholder_text = "Task Description"

[node name="ShowClockButton" type="Button" parent="TimerAndButtons/HBoxContainer" unique_id=419802243]
layout_mode = 2
tooltip_text = "Show Current Time"
toggle_mode = true
icon = ExtResource("6_4c57u")

[node name="ShowListButton" type="Button" parent="TimerAndButtons/HBoxContainer" unique_id=917045471]
layout_mode = 2
tooltip_text = "Show Task List"
icon = ExtResource("6_kek77")

[node name="ShowSettingsButton" type="Button" parent="TimerAndButtons/HBoxContainer" unique_id=1231767321]
layout_mode = 2
tooltip_text = "Show Settings Panel"
icon = ExtResource("7_4c57u")

[node name="SettingsPanel" parent="." unique_id=1190921543 instance=ExtResource("2_0xm2m")]
layout_mode = 0
offset_left = 196.0
offset_top = 235.0
offset_right = 416.0
offset_bottom = 430.0

[node name="EntryList" parent="." unique_id=2044402737 instance=ExtResource("9_efxa6")]
layout_mode = 0
offset_left = 468.0
offset_top = 237.0
offset_right = 788.0
offset_bottom = 637.0

[connection signal="toggled" from="TimerAndButtons/HBoxContainer2/VBoxContainer/PlayPauseButton" to="." method="_on_play_pause_button_toggled"]
[connection signal="pressed" from="TimerAndButtons/HBoxContainer2/VBoxContainer/StopButton" to="." method="_on_stop_button_pressed"]
